--- a/chat_app_p2p/pubspec.yaml
+++ b/chat_app_p2p/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_webrtc: ^0.6.3
+  sdp_transform: ^0.3.0
 
 dev_dependencies:
   flutter_test:
